--- a/client/style.scss
+++ b/client/style.scss
@@ -93,16 +93,36 @@ body{
     .quesResp{
       width:calc(100% - 40px);
       margin-left:10px;
-      height:10px;
+      height:13px;
       margin-bottom:5px;
       outline: none;
       border:none;
       padding:10px;
       font-family: $font-ops;
-      background: #1e1e1e;
+      background: #262626;
       border:1px solid #222222;
       color:#dddddd;
       @include border-radius(2px);
+    }
+    button{
+      background:#33b5e5;
+      @include border-radius(3px);
+      color:white;
+      padding-left:25px;
+      padding-right:25px;
+      display:block;
+      height:40px;
+      border:none;
+      text-transform: uppercase;
+      font-family: $font-ops;
+      transition: .4s;
+      box-shadow: 0px 0px 0px rgba(0,0,0,0.2);
+      margin-left:10px;
+      margin-top:10px;
+    }
+    button:hover{
+      background:#178ab4;
+      box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
     }
   }
   .nav{
@@ -594,6 +614,9 @@ body{
         font-family: $font-ops;
         color:#4c4d4d;
         font-size: 20px;
+      }
+      .opt1, .opt2{
+        cursor: pointer;
       }
       .bossLabel{
         @extend .label;
