--- a/client/partials/recruiting.html
+++ b/client/partials/recruiting.html
@@ -187,7 +187,7 @@
         {{#if rc.shR}}
         <img src="/shaman/restoration.png" title="Restoration Shaman"/>
         {{/if}}
-        {{#if rc.shRn}}
+        {{#if rc.shEn}}
         <img src="/shaman/enhancement.png" title="Enhancement Shaman"/>
         {{/if}}
       </div>
