--- a/client/partials/modals.html
+++ b/client/partials/modals.html
@@ -1,9 +1,28 @@
 <template name="modals">
-  <div class="deletePost">
-    <div class="title">
-      Are you sure you want to Delete this post?
+  <div class="deleteModal">
+    <div class="shadow">
+
     </div>
-    <button class="delY">Yes</button>
-    <button class="delN">No</button>
+    <div class="deletePost">
+      <div class="title">
+        Are you Sure?
+      </div>
+      <div class="buttons">
+        <button class="delY">Yes</button>
+        <button class="delN" style="background:#e53340 !important">No</button>
+      </div>
+    </div>
+    <script>
+    $(document).bind("mouseup touchend", function (e) {
+      var container = $('.deletePost');
+      var modal = $('.shadow');
+
+      if (!container.is(e.target) // if the target of the click isn't the container...
+      && container.has(e.target).length === 0) // ... nor a descendant of the container
+      {
+        $('.deleteModal').hide()
+      }
+    });
+    </script>
   </div>
 </template>
