--- a/client/style.scss
+++ b/client/style.scss
@@ -65,13 +65,111 @@ body{
   background-attachment: fixed;
 }
 
+.fa{
+  cursor: pointer;
+}
+
 @media (min-width: 320px){
   .nav{
     display: none;
   }
 }
 
+
 @media (min-width: 750px){
+  /* login style */
+  .loginCon{
+    width:500px;
+    margin-left:calc(50% - 250px);
+    margin-top:100px;
+  }
+
+  .loginTitle{
+    text-align: center;
+    margin-bottom:10px;
+    font-size: 2.5em;
+    font-family: "Varela Round", sans-serif;
+    color:white;
+  }
+
+  .fieldCon{
+    background:white;
+    /* border */
+    border-radius: 6px 6px 6px 6px;
+    -moz-border-radius: 6px 6px 6px 6px;
+    -webkit-border-radius: 6px 6px 6px 6px;
+    border: 0px solid #000000;
+  }
+
+  .loginText{
+    margin-left:5%;
+    width:90%;
+    padding-top:5%;
+    color:#474e59;
+    font-family: "Varela Round", sans-serif;
+    margin-bottom:4px;
+  }
+
+  .username,
+  .password{
+    width:90%;
+    margin-left:5%;
+    border-radius: 4px 4px 4px 4px;
+    -moz-border-radius: 4px 4px 4px 4px;
+    -webkit-border-radius: 4px 4px 4px 4px;
+    border: 0px solid #000000;
+    height:40px;
+    border: 1px solid #bfbfbf;
+    font-size:1.2em;
+  }
+
+  .loginBttn{
+    width:20%;
+    margin-left:75%;
+    margin-right:5%;
+    height:40px;
+    margin-top:5%;
+    margin-bottom:5%;
+    border:none;
+    background:#32a6d7;
+    color:white;
+    font-size:1.2em;
+    /* border */
+    border-radius: 4px 4px 4px 4px;
+    -moz-border-radius: 4px 4px 4px 4px;
+    -webkit-border-radius: 4px 4px 4px 4px;
+    border: 0px solid #000000;
+  }
+
+  /* secret style */
+
+  .firstCreateModal{
+    position: absolute;
+    width:400px;
+    margin-left:calc(50% - 200px);
+    background: white;
+    height:50px;
+    display: none;
+  }
+
+  .secretPhrase{
+    height:30px;
+    margin-top:5px;
+    margin-left:10px;
+    width:305px;
+  }
+
+  .secretPhraseBttn{
+    background: #32a6d7;
+    color:white;
+    height: 30px;
+    border:none;
+    /*border */
+    border-radius: 4px 4px 4px 4px;
+    -moz-border-radius: 4px 4px 4px 4px;
+    -webkit-border-radius: 4px 4px 4px 4px;
+    border: 0px solid #000000;
+  }
   .nav{height: 60px; @include border-radius(4px);  margin-top:50px;}
   .nav, .feed, .footer{
     display:block;
@@ -105,7 +203,7 @@ body{
       @include border-radius(2px);
     }
     button{
-      background:#33b5e5;
+      background:transparent;
       @include border-radius(3px);
       color:white;
       padding-left:25px;
@@ -119,10 +217,8 @@ body{
       box-shadow: 0px 0px 0px rgba(0,0,0,0.2);
       margin-left:10px;
       margin-top:10px;
-    }
-    button:hover{
-      background:#178ab4;
-      box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
+      border:1px solid #c9c9c9;
+      cursor: pointer;
     }
   }
   .nav{
@@ -179,9 +275,11 @@ body{
       background:#1a1a1a;
       position: relative;
       img, .cover{
-        width: 12.25%;
+        width: calc(13.5% - 10px);
         padding:7px 5px 2px 5px;
         display: inline;
+        max-height:45.688px;
+        object-fit: cover;
       }
       .cover{
         position: absolute;
@@ -191,7 +289,7 @@ body{
         transition: .4s;
         margin-top: 7px;
         margin-left: 5px;
-        padding: 0px 0px 8px 0px;
+        padding:7px 0px 1px 0px
       }
       .cover:hover{
         background: transparent;
@@ -727,6 +825,50 @@ body{
       box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
     }
   }
+  .deleteModal{
+    display:none;
+  }
+  .shadow{
+    position: absolute;
+    width:100%;
+    height:calc(100% - 60px);
+    background:rgba(0, 0, 0, 0.65);
+    z-index: 3;
+  }
+  .deletePost{
+    width:200px;
+    height:90px;
+    position: absolute;
+    margin-left:calc(50% - 100px);
+    background:white;
+    box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
+    z-index: 4;
+    @include border-radius(4px);
+    padding:10px;
+    font-family: $font-ops;
+    color:#545454;
+    text-align: center;
+    margin-top:calc(255px);
+    .title{
+      padding-top:15px
+    }
+    .buttons{
+      position: absolute;
+      bottom:10px;
+      button{
+        color:white;
+        width:98px;
+        outline:none;
+        border:none;
+        height:34px;
+        background: #33b5e5;
+        @include border-radius(3px);
+        text-transform: uppercase;
+        box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.2);
+        cursor: pointer;
+      }
+    }
+  }
 }
 
 @media (min-width: 1040px){
@@ -743,6 +885,41 @@ body{
   .recruiting{
     .name{
       font-size: 15px;
+    }
+  }
+  .homeGallery{
+    border:7px solid #212121;
+    img{
+      width: 100%;
+      display: block;
+    }
+    .thumbs{
+      width: 100%;
+      background:#1a1a1a;
+      position: relative;
+      img, .cover{
+        width: 12.25%;
+        padding:7px 5px 2px 5px;
+        display: inline;
+        max-height:45.688px;
+        object-fit: cover;
+      }
+      .cover{
+        position: absolute;
+        height: 64%;
+        margin-top:7px;
+        background: rgba(0, 0, 0, 0.51);
+        transition: .4s;
+        margin-top: 7px;
+        margin-left: 5px;
+        padding: 0px 0px 8px 0px;
+      }
+      .cover:hover{
+        background: transparent;
+      }
+      .cover:active{
+        background:transparent;
+      }
     }
   }
 }
