Add mobile & install directions

--- a/client/partials/admin/settings.html
+++ b/client/partials/admin/settings.html
@@ -101,8 +101,10 @@
         <td><input type="checkbox" id="warP" checked="{{rc.warP}}"> Protection</td>
       </tr>
     </table>
+    <!-- not live yet
     <div class="label" style="margin-top:20px">Background Image</div>
     <input type="file" accept="image/*" class="upload">
-    <button id="post">Save</button>
-  </div>
+  -->
+  <button id="post">Save</button>
+</div>
 </template>
