--- a/client/partials/news.html
+++ b/client/partials/news.html
@@ -13,6 +13,7 @@
       </div>
     </div>
     {{/each}}
+    {{#if equals currentPage "news"}}
     <script>
     var fired = false;
     var canFire = true;
@@ -39,5 +40,6 @@
       })
     });
     </script>
+    {{/if}}
   </div>
 </template>
