--- a/client/style.scss
+++ b/client/style.scss
@@ -70,13 +70,6 @@ body{
 }
 
 @media (min-width: 320px){
-  .nav{
-    display: none;
-  }
-}
-
-
-@media (min-width: 750px){
   /* login style */
   .loginCon{
     width:500px;
@@ -180,6 +173,7 @@ body{
   }
   .feed{
     margin-bottom:10;
+    margin-top:60px;
   }
   .apply{
     .quesTitle{
@@ -225,6 +219,10 @@ body{
     border:1px solid #222222;
     width:calc(100% - 2px);
     overflow: visible;
+    margin-top:0;
+    position: fixed;
+    z-index: 5;
+    margin-top:-60px;
     .button{
       cursor: pointer;
       @include non-text-select;
@@ -242,11 +240,10 @@ body{
       width: 20%;
       float:left;
       img{
-        margin-top:-45px;
         margin-left:auto;
         margin-right:auto;
         display: block;
-        min-width: 145px;
+        min-width: 88px;
         width:70%;
       }
     }
@@ -255,14 +252,10 @@ body{
     }
   }
   .content{
-    width:calc(70% - 20px);
+    width:calc(100% - 20px);
     display: inline-block;
     padding:10px;
     padding-bottom:10px;
-  }
-  .widgets{
-    float:right;
-    width:30%;
   }
   .homeGallery{
     border:7px solid #212121;
@@ -333,7 +326,10 @@ body{
       left:15px;
     }
     .date{
-      @extend .title;
+      text-transform: uppercase;
+      position: absolute;
+      font-family: $font-ops;
+      left:15px;
       color:#006494;
       bottom:12.5px;
       font-weight: 600;
@@ -385,91 +381,6 @@ body{
         width:21px;
         height:21px;
       }
-    }
-  }
-  .raidStatus{
-    border:1px solid #222222;
-    margin-top:10px;
-    background: #111;
-    width:calc(100% - 12px);
-    padding-bottom:5px;
-    margin-bottom:10px;
-    margin-top:10px;
-    font-family: $font-ops;
-    .raidStatusCon{
-      position: relative;
-      .raidToolTip{
-        display:none;
-        position:fixed;
-        overflow:hidden;
-        //width:450px;
-        z-index: 3;
-        box-shadow: 4px 4px 15px #000;
-        background:rgba(23, 23, 23, 0.91);
-        table{
-          padding:2px;
-        }
-        .title, .bn{
-          //width: 210px;
-          font-size: 13px;
-          padding:10px;
-        }
-        .size, .bS{
-          width:70px;
-          font-size: 11px;
-          padding: 10px;
-        }
-        .bn, .bS{
-          padding-top:0;
-          font-size: 10px;
-          padding-bottom: 2px;
-        }
-        .bS{
-          color: #00de00
-        }
-        .dead{
-          color:red;
-        }
-        .title, .size{
-          padding-bottom: 5px;
-        }
-      }
-    }
-    .raidStatusCon:hover{
-      .raidToolTip{
-        display: block;
-      }
-    }
-    .title{
-      padding: 10px;
-      color:white;
-      text-transform: uppercase;
-      text-align: left;
-    }
-    .percentCon{
-      margin:10px;
-      margin-top:0;
-      height:20px;
-      width:calc(100% - 20px);
-      border:1px solid #222222;
-      position: relative;
-      @include border-radius(3px);
-      overflow: hidden;
-    }
-    .percentText{
-      text-align: center;
-      color:white;
-      line-height: 20px;
-      position: absolute;
-      width: 100%;
-      top:0;
-      font-size: 13px;
-      text-transform: uppercase;
-    }
-    .percentMask{
-      width:40%;
-      height:100%;
-      background-color: #983e0b;
     }
   }
   .newsHeader{
@@ -565,18 +476,7 @@ body{
 
   //admin styles
   .adminHeader{
-    //green background: #00a857;
-    background: #0073b9;
-    width:100%;
-    height:60px;
-    div{
-      float:right;
-      color:#e2f5ed;
-      font-family: $font-ops;
-      padding-right:20px;
-      cursor: pointer;
-      line-height: 60px;
-    }
+    display: none;
   }
   .adminLeft{
     background: #243136;
@@ -867,6 +767,144 @@ body{
         box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.2);
         cursor: pointer;
       }
+    }
+  }
+  .raidStatus{
+    display:none;
+  }
+}
+
+
+@media (min-width: 750px){
+  .widgets{
+    float:right;
+    width:30%;
+  }
+  .content{
+    width:calc(70% - 20px);
+  }
+  .adminHeader{
+    //green background: #00a857;
+    background: #0073b9;
+    width:100%;
+    height:60px;
+    display: block;
+    div{
+      float:right;
+      color:#e2f5ed;
+      font-family: $font-ops;
+      padding-right:20px;
+      cursor: pointer;
+      line-height: 60px;
+    }
+  }
+  .nav{
+    border:1px solid #222222;
+    overflow: visible;
+    margin-top:50px;
+    position: relative;
+    .button{
+      cursor: pointer;
+      @include non-text-select;
+      width:20%;
+      line-height: 60px;
+    }
+    .logo{
+      width: 20%;
+      img{
+        margin-top:-45px;
+        min-width: 145px;
+        width:70%;
+      }
+    }
+  }
+  .feed{
+    margin-top:0;
+  }
+  .raidStatus{
+    display: block;
+    border:1px solid #222222;
+    margin-top:10px;
+    background: #111;
+    width:calc(100% - 12px);
+    padding-bottom:5px;
+    margin-bottom:10px;
+    margin-top:10px;
+    font-family: $font-ops;
+    .raidStatusCon{
+      position: relative;
+      .raidToolTip{
+        display:none;
+        position:fixed;
+        overflow:hidden;
+        //width:450px;
+        z-index: 3;
+        box-shadow: 4px 4px 15px #000;
+        background:rgba(23, 23, 23, 0.91);
+        table{
+          padding:2px;
+        }
+        .title, .bn{
+          //width: 210px;
+          font-size: 13px;
+          padding:10px;
+        }
+        .size, .bS{
+          width:70px;
+          font-size: 11px;
+          padding: 10px;
+        }
+        .bn, .bS{
+          padding-top:0;
+          font-size: 10px;
+          padding-bottom: 2px;
+        }
+        .bS{
+          color: #00de00
+        }
+        .dead{
+          color:red;
+        }
+        .title, .size{
+          padding-bottom: 5px;
+        }
+      }
+    }
+    .raidStatusCon:hover{
+      .raidToolTip{
+        display: block;
+      }
+    }
+    .title{
+      padding: 10px;
+      color:white;
+      text-transform: uppercase;
+      text-align: left;
+    }
+    .percentCon{
+      margin:10px;
+      margin-top:0;
+      height:20px;
+      width:calc(100% - 20px);
+      border:1px solid #222222;
+      position: relative;
+      @include border-radius(3px);
+      overflow: hidden;
+    }
+    .percentText{
+      text-align: center;
+      color:white;
+      line-height: 20px;
+      position: absolute;
+      width: 100%;
+      top:0;
+      font-size: 13px;
+      text-transform: uppercase;
+    }
+    .percentMask{
+      width:40%;
+      height:100%;
+      background-color: #983e0b;
     }
   }
 }
