--- a/client/partials/nav.html
+++ b/client/partials/nav.html
@@ -10,7 +10,7 @@
       <img src="/tabard.png" title="Blessed Ignorance"/>
     </div>
     <div class="button" id="news">
-      NEWS
+      STREAMS
     </div>
     <div class="button" id="apply">
       APPLY
