--- a/client/partials/newsHeader.html
+++ b/client/partials/newsHeader.html
@@ -1,6 +1,6 @@
 <template name="newsHeader">
   <div class="newsHeader">
-    {{#if equals currentPage "news"}}
+    {{#if equals currentPage "feed"}}
     News
     <div>
       Sort By:
