--- a/client/partials/admin/settings.html
+++ b/client/partials/admin/settings.html
@@ -4,6 +4,17 @@
     <input class="postTitle" placeholder="{{st.title}}"/>
     <span class="label">About text</span>
     <textarea class="content" placeholder="{{at.about}}"></textarea>
+    <!-- tabard upload -->
+    <div class="label">Upload Tabard (The img tag size is 145x145 and object-fit)</div>
+    <input type="file" accept="image/*" class="upload" id="tabardIn">
+    <canvas id="tabardCan" style="display:none"></canvas>
+    <input style="display:none" id="tabardUp"/>
+    <!-- background upload -->
+    <div class="label">Upload Background (Recommended: 1920x1080 ~400KB)</div>
+    <input type="file" accept="image/*" class="upload" id="backgroundIn">
+    <canvas id="backgroundCan" style="display:none"></canvas>
+    <input style="display:none" id="backgroundUp"/>
+    <!-- recruting -->
     <span class="label">Recruiting</span>
     <div class="type">Death Knight</div>
     <table>
@@ -105,6 +116,10 @@
     <div class="label" style="margin-top:20px">Background Image</div>
     <input type="file" accept="image/*" class="upload">
   -->
-  <button id="post">Save</button>
+  <button id="saveSettings">Save</button>
+  <script>
+    $('.postTitle').val('{{st.title}}')
+    $('.content').val('{{at.about}}')
+  </script>
 </div>
 </template>
