--- a/client/partials/news.html
+++ b/client/partials/news.html
@@ -13,7 +13,7 @@
       </div>
     </div>
     {{/each}}
-    {{#if equals currentPage "news"}}
+    {{#if equals currentPage "feed"}}
     <script>
     var fired = false;
     var canFire = true;
