--- a/client/partials/feed.html
+++ b/client/partials/feed.html
@@ -28,6 +28,9 @@
       {{#if equals currentPage "about"}}
       {{>about}}
       {{/if}}
+      {{#if equals currentPage "streams"}}
+      {{>streams}}
+      {{/if}}
       {{#if equals currentPage "apply"}}
       {{>applyPage}}
       {{/if}}
