--- a/client/partials/nav.html
+++ b/client/partials/nav.html
@@ -9,7 +9,7 @@
     <div class="logo">
       <img src="/tabard.png" title="Blessed Ignorance"/>
     </div>
-    <div class="button" id="news">
+    <div class="button" id="streams">
       STREAMS
     </div>
     <div class="button" id="apply">
