--- a/client/partials/newsHeader.html
+++ b/client/partials/newsHeader.html
@@ -22,5 +22,8 @@
     </div>
     {{/each}}
     {{/if}}
+    {{#if equals currentPage "streams"}}
+    LIVE STREAMS
+    {{/if}}
   </div>
 </template>
