Add twitch sorting

--- a/client/partials/admin/settings.html
+++ b/client/partials/admin/settings.html
@@ -4,6 +4,10 @@
     <input class="postTitle" placeholder="{{st.title}}"/>
     <span class="label">About text</span>
     <textarea class="content" placeholder="{{at.about}}"></textarea>
+    <script>
+      $('.postTitle').val("{{st.title}}")
+      $('.content').val("{{at.about}}")
+    </script>
     <!-- tabard upload
     <div class="label">Upload Tabard (The img tag size is 145x145 and object-fit)</div>
     <input type="file" accept="image/*" class="upload" id="tabardIn">
@@ -118,9 +122,5 @@
     <input type="file" accept="image/*" class="upload">
   -->
   <button id="saveSettings">Save</button>
-  <script>
-    $('.postTitle').val('{{st.title}}')
-    $('.content').val('{{at.about}}')
-  </script>
 </div>
 </template>
