--- a/client/partials/admin/twitch.html
+++ b/client/partials/admin/twitch.html
@@ -26,7 +26,7 @@
     let thisAbn = '"editTu'+i+'"'
     var insertAbn = "#editTu"+i
 
-    $('#twitchCon').append('<div class="bosses" id='+twitchCon+'><input class="bossName" placeholder="Username" id='+thisAbn+'/> </div>')
+    $('#twitchCon').append('<div class="bosses" id='+twitchCon+'><input class="twitchName" placeholder="Username" id='+thisAbn+'/> </div>')
     $(insertAbn).val(twitchUsers[i])
   }
   </script>
@@ -37,7 +37,7 @@
   for(var i = 0; i < count; i++){
     var twitchCon = '"twitchCon'+i+'"'
     let thisAbn = '"editTu'+i+'"'
-    $('#twitchCon').append('<div class="bosses" id='+twitchCon+'><input class="bossName" placeholder="Username" id='+thisAbn+'/> </div>')
+    $('#twitchCon').append('<div class="bosses" id='+twitchCon+'><input class="twitchName" placeholder="Username" id='+thisAbn+'/> </div>')
   }
   </script>
   {{/each}}
