--- a/client/style.scss
+++ b/client/style.scss
@@ -163,7 +163,7 @@ body{
     -webkit-border-radius: 4px 4px 4px 4px;
     border: 0px solid #000000;
   }
-  .nav{height: 60px; @include border-radius(4px);  margin-top:50px;}
+  .nav{height: 60px; @include border-radius(4px);  margin-top:50px; font-size: 13px;}
   .nav, .feed, .footer{
     display:block;
     width:100%;
@@ -657,6 +657,10 @@ body{
         @extend .postTitle;
         width:calc(100% - 160px)!important
       }
+      .twitchName{
+        @extend .bossName;
+        width:100%!important;
+      }
       .bcMain, .bcHero, .bcMyth{
         @extend .postTitle;
         width: calc(33.3% - 62px);
@@ -949,6 +953,7 @@ body{
     overflow: visible;
     margin-top:50px;
     position: relative;
+    font-size: 16px;
     .button{
       cursor: pointer;
       @include non-text-select;
